# nifti_ros_utils

./: CMakeLists.txt  mainpage.dox  manifest.xml
action/: Scanning.action
launch/: base_local_planner_params.yaml  costmap_common_params.yaml  default-robot.yaml  default_teleop_joy.yaml  diag.yaml  diagnostics.launch  ekf.launch  emilia_all_on_robot.launch  environment.yaml  eth-robot.yaml  explore_costmap_params.yaml  filtering_tests.launch  global_costmap_params.yaml  imu.launch  karto_slam.launch  laptop_teleop_press_conf.launch  laser.launch  local_costmap_params.yaml  move_base.launch  nifti_joy.launch  nifti_joy2.launch  nifti_joy_laser_rviz.launch  nifti_laser_assembler.launch  nifti_laser_assembler_old.launch  nifti_laser_assembler_press_conf.launch  nifti_mux.launch  nifti_simu.launch  nifti_teleop_joy.launch  nifti_teleop_no_joy.launch  nifti_ugv_teleop.launch  nifti_ugv_teleop2.launch  octo.launch  omnicamera.launch  recovery_behaviors.yaml  robot.launch  robot.yaml  robot3d.launch  robot_diagnostics.launch  robot_node.launch  robot_teleop_press_conf.launch  (+7 more)
msg/: RobotStatus.msg
nifti_drivers_launchers/: mainpage.dox  manifest.xml
nifti_drivers_launchers/launch/: imu.launch
nifti_laser_assembler/: CMakeLists.txt  manifest.xml
nifti_laser_filtering/: CMakeLists.txt  manifest.xml
nifti_laser_filtering/launch/: nifti_laser_filtering.launch
nifti_laser_filtering/src/: nifti_laser_filtering.cpp
nifti_launchers/: mainpage.dox  manifest.xml
nifti_robot_driver/: CMakeLists.txt  manifest.xml
nifti_teleop/: rosdep.yaml
nodes/: differential_filter.py  nifti_laser_assembler.py  nifti_mux_ctrl.py  nifti_teleop_helper.py  nifti_teleop_joy.py  nifti_teleop_tank.py  nifti_test_flippers.py  nth_action.py  priority_wrapper.py
robot_model/: nifti_robot.urdf
src/: nifti_filtering_tests.cpp  nifti_laser_assembler.cpp  nifti_laser_filtering.cpp  nifti_robot.cpp  nifti_robot.h  nifti_robot_main.cpp  nifti_robot_messages.h  nifti_robot_simulation.c
